<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

   <TextView
      android:id="@+id/textView1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true"
      android:layout_marginTop="15dp"
      android:text="@string/location"
      android:textColor="@android:color/white"
      android:textAppearance="?android:attr/textAppearanceMedium" />

   <EditText
      android:id="@+id/editText1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/textView1"
      android:layout_alignParentRight="true"
      android:textColor="@android:color/black"
      android:ems="10" />

   <Button
       
       android:textColor="@android:color/white"
       android:id="@+id/button1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignRight="@+id/editText1"
       android:layout_below="@+id/editText1"
       
       android:onClick="open"
       android:text="@string/weather" />

   <EditText
       android:id="@+id/editText5"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignLeft="@+id/editText3"
       android:layout_alignParentBottom="true"
       android:ems="10"
       android:textColor="@android:color/black" />

   <TextView
       android:id="@+id/textView5"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignRight="@+id/textView2"
       android:layout_alignTop="@+id/editText5"
       android:text="@string/pressure"
       android:textAppearance="?android:attr/textAppearanceSmall"
       android:textColor="@android:color/white" />

   <EditText
       android:id="@+id/editText4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/editText5"
       android:layout_alignRight="@+id/editText5"
       android:layout_marginBottom="36dp"
       android:ems="10"
       android:textColor="@android:color/black" />

   <TextView
       android:id="@+id/textView4"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/editText4"
       android:layout_alignBottom="@+id/editText4"
       android:layout_alignLeft="@+id/textView5"
       android:text="@string/humidity"
       android:textAppearance="?android:attr/textAppearanceSmall"
       android:textColor="@android:color/white" />

   <EditText
       android:id="@+id/editText3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/editText4"
       android:layout_alignLeft="@+id/editText2"
       android:layout_marginBottom="45dp"
       android:ems="10"
       android:textColor="@android:color/black" />

   <TextView
       android:id="@+id/textView3"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/editText3"
       android:layout_alignBottom="@+id/editText3"
       android:layout_alignParentLeft="true"
       android:text="@string/temperature"
       android:textAppearance="?android:attr/textAppearanceSmall"
       android:textColor="@android:color/white" />

   <EditText
       android:id="@+id/editText2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_above="@+id/editText3"
       android:layout_alignRight="@+id/button1"
       android:layout_marginBottom="36dp"
       android:ems="10"
       android:textColor="@android:color/black" />

   <TextView
       android:id="@+id/textView2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/editText2"
       android:layout_alignBottom="@+id/editText2"
       android:layout_alignLeft="@+id/textView3"
       android:text="@string/country"
       android:textAppearance="?android:attr/textAppearanceSmall"
       android:textColor="@android:color/white" />

</RelativeLayout>